website/content/v1.14/reference/configuration/block/existingvolumeconfig.md
---
description: |
    ExistingVolumeConfig is an existing volume configuration document.
    Existing volumes allow to mount partitions (or whole disks) that were created
    outside of Talos. Volume will be mounted under `/var/mnt/<name>`.
    The existing volume config name should not conflict with user volume names.
title: ExistingVolumeConfig
---

<!-- markdownlint-disable -->









{{< highlight yaml >}}
apiVersion: v1alpha1
kind: ExistingVolumeConfig
name: my-existing-volume # Name of the volume.
# The discovery describes how to find a volume.
discovery:
    # The volume selector expression.
    volumeSelector:
        match: volume.partition_label == "MY-DATA" # The Common Expression Language (CEL) expression to match the volume.
{{< /highlight >}}


| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`name` |string |Name of the volume.<br><br>Name can only contain:<br>lowercase and uppercase ASCII letters, digits, and hyphens.  | |
|`discovery` |<a href="#ExistingVolumeConfig.discovery">VolumeDiscoverySpec</a> |The discovery describes how to find a volume.  | |
|`mount` |<a href="#ExistingVolumeConfig.mount">ExistingMountSpec</a> |The mount describes additional mount options.  | |
|`trim` |<a href="#ExistingVolumeConfig.trim">TrimConfig</a> |The trim describes the per-volume filesystem trim (fstrim) configuration.  | |
|`scrub` |<a href="#ExistingVolumeConfig.scrub">ScrubConfig</a> |The scrub describes the per-volume filesystem scrub configuration.  | |




## discovery {#ExistingVolumeConfig.discovery}

VolumeDiscoverySpec describes how the volume is discovered.




| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`volumeSelector` |<a href="#ExistingVolumeConfig.discovery.volumeSelector">VolumeSelector</a> |The volume selector expression.  | |




### volumeSelector {#ExistingVolumeConfig.discovery.volumeSelector}

VolumeSelector selects an existing volume.




| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`match` |Expression |The Common Expression Language (CEL) expression to match the volume. <details><summary>Show example(s)</summary>match volumes with partition label MY-DATA:{{< highlight yaml >}}
match: volume.partition_label == "MY-DATA"
{{< /highlight >}}match xfs volume on disk with serial 'SERIAL123':{{< highlight yaml >}}
match: volume.name == "xfs" && disk.serial == "SERIAL123"
{{< /highlight >}}</details> | |








## mount {#ExistingVolumeConfig.mount}

ExistingMountSpec describes how the volume is mounted.




| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`readOnly` |bool |Mount the volume read-only.  | |
|`disableAccessTime` |bool |If true, disable file access time updates.  | |
|`secure` |bool |Enable secure mount options (nosuid, nodev).<br><br>Defaults to true for better security.  | |






## trim {#ExistingVolumeConfig.trim}

TrimConfig describes per-volume filesystem trim (fstrim) configuration.

It overrides the global FilesystemTrimConfig for the volume.





| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`enabled` |bool |Enable or disable trimming for this volume.<br><br>If not set, trimming is enabled when the global FilesystemTrimConfig is present.  | |
|`interval` |Duration |The interval at which the volume is trimmed, overriding the global trim interval.  | |






## scrub {#ExistingVolumeConfig.scrub}

ScrubConfig describes per-volume filesystem scrub configuration.

It overrides the global FilesystemScrubConfig for the volume.





| Field | Type | Description | Value(s) |
|-------|------|-------------|----------|
|`enabled` |bool |Enable or disable scrubbing for this volume.<br><br>If not set, scrubbing is enabled by default when scrub section is present.  | |
|`interval` |Duration |The interval at which the volume is scrubbed, overriding the global scrub interval.  | |








